[FIX] point_of_sale: prevent numpad from shifting when using it
Steps to reproduce:

- Go to Point of sale app
- Start a new session (or continue in an existing one)
- Add any products to the order and click on the payment button.
- In this new screen start typing in the numpad.

Issue:

We can see that almost everytime we add a number the shiftpad and the
left content of the screen shifts.

Solution:

We have added mainly `flex-basis: 0;` to the numpad annd both contents
in order to not let them shift.

opw-3089013

--- a/addons/point_of_sale/static/src/scss/pos.scss
+++ b/addons/point_of_sale/static/src/scss/pos.scss
@@ -1356,6 +1356,7 @@ td {
     overflow-x: hidden;
     overflow-y: auto;
     border-left: solid 1px $gray-300;
+    flex: 1 1 0px;
 }
 
 @media screen and (min-width: 768px) {
@@ -1427,11 +1428,13 @@ td {
     max-width: inherit;
     border: none;
     max-height: 100%;
+    flex: 1 1 0px;
 }
 .payment-screen .center-content {
     display: grid;
     grid-template-rows: auto 1fr;
     border: 10px solid $gray-300;
+    flex: 1 1 0px;
 }
 .payment-screen p.title-category {
     margin: 0;
@@ -1522,6 +1525,7 @@ td {
     margin-left: 10px;
     margin-right: 10px;
     padding: map-get($spacers, 3);
+    overflow: hidden;
 }
 .paymentline .delete-button {
   margin-left: 10px;
